# Q-Cali

./: .gitignore  README.md  TLS_forecasting_research.md  gap10_journal.md  gap10_prompts.md  gap1_journal.md  gap1_prompts.md  gap3_journal.md  gap3_prompts.md  gap5_journal.md  gap5_prompts.md  gap_references.yml  gap_solutions.typ  pyproject.toml  references.yml  research_journal.md  simulation_plan.md  testbed.typ
benchmarks/: noise_budget.py
docs/: prompt_history.md
docs/research/: calibration_DAG_reconstruction.md  research_superconducting_qubit_calibration.md  snake_optimizer_reconstruction_research.md
docs/typst/: survey.typ
src/: __init__.py
src/backend/: base.py
src/calibration/: __init__.py  dag.py  tolerances.py
src/calibration/nodes/: __init__.py  benchmarking.py  drag.py  rabi.py  ramsey.py  readout.py  spectroscopy.py
src/optimizer/: __init__.py  collision.py  error_model.py  inner_loop.py  snake.py
src/simulator/: __init__.py  backend.py  noise.py  processor.py  tls.py  transmon.py
src/tls_forecast/: __init__.py  base.py  changepoint.py  particle_filter.py
tests/: test_dag.py  test_noise.py  test_simulator.py  test_snake.py  test_tls_forecast.py
